Fix overflow and improve font size

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,7 @@
 a:visited {
   color: inherit;
 }
+
+#__next {
+  overflow-x: hidden;
+}
